@@ -249,7 +249,7 @@ print.loadings <- function(x, digits = 3L, cutoff = 0.1, sort = FALSE, ...)
     cat("\nLoadings:\n")
     fx <- setNames(format(round(Lambda, digits)), NULL)
     nc <- nchar(fx[1L], type="c")
-    fx[abs(Lambda) < cutoff] <- paste(rep(" ", nc), collapse = "")
+    fx[abs(Lambda) < cutoff] <- strrep(" ", nc)
     print(fx, quote = FALSE, ...)
     vx <- colSums(x^2)
     varex <- rbind("SS loadings" = vx)
